Fix assertion in RegisterUserUseCaseTest to access the first event correctly